--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
           </li>
         </ul>
-        <a class="navigation-logo" href="index.html">
+        <a class="navigation-logo">
           <img class="navigation-logo" src="" alt="Логотип">
         </a>
         <ul class="navigation-user">
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list button" href="#">
+            <a class="navigation-list  button-brown" href="#">
               ХОЧУ СЮДА!
             </a>
           </li>
@@ -53,24 +53,42 @@
     </header>
 
     <main class="main-index">
-      <h1 class="visually-hidden">Город Седона</h1>
+      <h1>Город Седона</h1>
       <img class="logo" src="" alt="Логотип города Седоны">
       <section class="general">
         <p class="general-about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="general-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="reasons">
-        <h2 class="visually-hidden">Причины</h2>
-        <ol class="reasons-list">
+        <h2 class="visually-hidden">Причины и услуги</h2>
+        <ul class="reasons-list">
           <li class="reasons-item">
             <h3 class="reasons-title">Настоящий городок</h3>
             <span>— №1 —</span>
             <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="reasons-img" src="" alt="Местная достопримечательность">
           </li>
+        </ul>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3 class="services-title">Жильё</h3>
+            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-title">Еда</h3>
+            <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-title">Сувениры</h3>
+            <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+        <ul class="reasons-list">
           <li class="reasons-item">
             <h3 class="reasons-title">Там есть мост дьявола</h3>
             <span>— №2 —</span>
             <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img class="reasons-img" src="" alt="Мост дьявола">
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Небольшая площадь</h3>
@@ -87,29 +105,13 @@
             <span>— №5 —</span>
             <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-        </ol>
-      </section>
-      <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-title">Жильё</h3>
-            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Еда</h3>
-            <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Сувениры</h3>
-            <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
-          </li>
         </ul>
       </section>
+
       <section class="feedback">
         <h2 class="feedback-title">Заинтересовались?</h2>
         <p class="feedback-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button">
+        <a class=" button-brown">
           ПОИСК ГОСТИНИЦЫ В Седоне
         </a>
       </section>
@@ -124,7 +126,7 @@
             <label class="visually-hidden" for="subscribe-email">Email</label>
             <input type="email" required name="subscribe-email" placeholder="Ваш e-mail" id="subscribe-email">
           </p>
-          <button class="subscribe-button" type="submit">Подписаться</button>
+          <button class="subscribe-button button-blue" type="submit">Подписаться</button>
         </form>
       </section>
       <section class="social">
