--- a/hotels.html
+++ b/hotels.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list button" href="#">
+            <a class="navigation-list button-brown" href="#">
               ХОЧУ СЮДА!
             </a>
           </li>
@@ -150,8 +150,8 @@
               до <input class="catalog-filter-input" type="number" name="max-price">
             </label>
           </fieldset>
-          <button class="catalog-button" type="submit">Применить</button>
-          <button class="clear" type="submit">Сбросить</button>
+          <button class="button-blue" type="submit">Применить</button>
+          <button class="clear" type="reset">Сбросить</button>
         </form>
         <form class="sorting-type">
           <label class="visually-hidden" for="sorting">Сортировка</label>
@@ -185,8 +185,8 @@
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             <span class="hotel-card-type">Гостиница</span>
             <span class="hotel-card-price">От 4000 ₽</span>
-            <a class="hotel-card-link" href="hotels.html">Подробнее</a>
-            <a class="hotel-card-add" href="hotels.html">В избранное</a>
+            <a class="hotel-card-link button-brown" href="hotels.html">Подробнее</a>
+            <a class="hotel-card-add button-blue" href="hotels.html">В избранное</a>
             <span class="visually-hidden hotel-card-stars">Число звезд</span>
             <span class="hotel-card-rating">Рейтинг: 8,5</span>
           </li>
@@ -195,8 +195,8 @@
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
             <span class="hotel-card-type">Мотель</span>
             <span class="hotel-card-price">От 3000 ₽</span>
-            <a class="hotel-card-link" href="hotels.html">Подробнее</a>
-            <a class="hotel-card-add" href="hotels.html">В избранное</a>
+            <a class="hotel-card-link button-brown" href="hotels.html">Подробнее</a>
+            <a class="hotel-card-add button-blue" href="hotels.html">В избранное</a>
             <span class="visually-hidden hotel-card-stars">Число звезд</span>
             <span class="hotel-card-rating">Рейтинг: 8,9</span>
           </li>
@@ -205,8 +205,8 @@
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             <span class="hotel-card-type">Апартаменты</span>
             <span class="hotel-card-price">От 2000 ₽</span>
-            <a class="hotel-card-link" href="hotels.html">Подробнее</a>
-            <a class="hotel-card-add" href="hotels.html">В избранное</a>
+            <a class="hotel-card-link button-brown" href="hotels.html">Подробнее</a>
+            <a class="hotel-card-add button-blue" href="hotels.html">В избранное</a>
             <span class="visually-hidden hotel-card-stars">Число звезд</span>
             <span class="hotel-card-rating">Рейтинг: 9,2</span>
           </li>
@@ -215,31 +215,31 @@
             <h3 class="hotel-card-title">GreenTree Inn</h3>
             <span class="hotel-card-type">Гостиница</span>
             <span class="hotel-card-price">От 3000 ₽</span>
-            <a class="hotel-card-link" href="hotels.html">Подробнее</a>
-            <a class="hotel-card-add" href="hotels.html">В избранное</a>
+            <a class="hotel-card-link button-brown" href="hotels.html">Подробнее</a>
+            <a class="hotel-card-add button-blue" href="hotels.html">В избранное</a>
             <span class="visually-hidden hotel-card-stars">Число звезд</span>
             <span class="hotel-card-rating">Рейтинг: 9,2</span>
           </li>
         </ul>
-        <button class="catalog-button show-more" type="button">Загрузить еще</button>
+        <button class="button-blue show-more" type="button">Загрузить еще</button>
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-сurrent">1</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">2</a>
+            <a class="pagination-link button-blue" href="#">2</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">3</a>
+            <a class="pagination-link button-blue" href="#">3</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">4</a>
+            <a class="pagination-link button-blue" href="#">4</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link pagination-more" href="#">...</a>
+            <a class="pagination-link pagination-more button-blue" href="#">...</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">10</a>
+            <a class="pagination-link button-blue" href="#">10</a>
           </li>
         </ul>
         <form class="pages-number">
@@ -263,7 +263,7 @@
             <label class="visually-hidden" for="subscribe-email">Email</label>
             <input type="email" required name="subscribe-email" placeholder="Ваш e-mail" id="subscribe-email">
           </p>
-          <button class="subscribe-button" type="submit">Подписаться</button>
+          <button class="subscribe-button button-blue" type="submit">Подписаться</button>
         </form>
       </section>
       <section class="social">
