--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -26,7 +27,7 @@
           </li>
         </ul>
         <a class="navigation-logo">
-          <img class="navigation-logo" src="" alt="Логотип">
+          <img class="navigation-logo" src="img/sedona.svg" width="138" height="70" alt="Логотип">
         </a>
         <ul class="navigation-user">
           <li class="navigation-item">
@@ -54,7 +55,7 @@
 
     <main class="main-index">
       <h1>Город Седона</h1>
-      <img class="logo" src="" alt="Логотип города Седоны">
+      <img class="logo" src="img/index-background.jpg" width="1200" height="485" alt="Вид на Седону">
       <section class="general">
         <p class="general-about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="general-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -66,7 +67,7 @@
             <h3 class="reasons-title">Настоящий городок</h3>
             <span>— №1 —</span>
             <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="reasons-img" src="" alt="Местная достопримечательность">
+            <img class="reasons-img" src="img/city-place.jpg" width="800" height="384" alt="Местная достопримечательность">
           </li>
         </ul>
         <ul class="services-list">
@@ -88,7 +89,7 @@
             <h3 class="reasons-title">Там есть мост дьявола</h3>
             <span>— №2 —</span>
             <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="reasons-img" src="" alt="Мост дьявола">
+            <img class="reasons-img" src="img/bridge.jpg" width="800" height="384" alt="Мост дьявола">
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Небольшая площадь</h3>
