--- a/hotels.html
+++ b/hotels.html
@@ -209,7 +209,7 @@
             <span class="hotel-card-type">Апартаменты</span>
             <span class="hotel-card-price">От 2000 ₽</span>
             <a class="hotel-card-link button-brown" href="hotels.html">Подробнее</a>
-            <a class="hotel-card-add button-blue" href="hotels.html">В избранное</a>
+            <a class="hotel-card-add button-green" href="hotels.html">В избранном</a>
             <span class="visually-hidden hotel-card-stars">Число звезд</span>
             <span class="hotel-card-rating">Рейтинг: 9,2</span>
           </li>
