--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list  button-brown" href="#">
-              ХОЧУ СЮДА!
+            <a class="navigation-list button-brown" href="#">
+              Хочу сюда!
             </a>
           </li>
         </ul>
@@ -112,7 +112,7 @@
       <section class="feedback">
         <h2 class="feedback-title">Заинтересовались?</h2>
         <p class="feedback-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class=" button-brown">
+        <a class="button-brown">
           ПОИСК ГОСТИНИЦЫ В Седоне
         </a>
       </section>
