--- a/index.html
+++ b/index.html
@@ -53,118 +53,136 @@
       </nav>
     </header>
 
-    <main class="main-index">
-      <h1>Город Седона</h1>
-      <img class="logo" src="img/index-background.jpg" width="1200" height="485" alt="Вид на Седону">
-      <section class="general">
-        <p class="general-about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="general-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-      </section>
-      <section class="reasons">
-        <h2 class="visually-hidden">Причины и услуги</h2>
-        <ul class="reasons-list">
-          <li class="reasons-item">
-            <h3 class="reasons-title">Настоящий городок</h3>
-            <span>— №1 —</span>
-            <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="reasons-img" src="img/city-place.jpg" width="800" height="384" alt="Местная достопримечательность">
-          </li>
-        </ul>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-title">Жильё</h3>
-            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Еда</h3>
-            <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Сувениры</h3>
-            <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
-          </li>
-        </ul>
-        <ul class="reasons-list">
-          <li class="reasons-item">
-            <h3 class="reasons-title">Там есть мост дьявола</h3>
-            <span>— №2 —</span>
-            <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="reasons-img" src="img/bridge.jpg" width="800" height="384" alt="Мост дьявола">
-          </li>
-          <li class="reasons-item">
-            <h3 class="reasons-title">Небольшая площадь</h3>
-            <span>— №3 —</span>
-            <p class="reasons-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="reasons-item">
-            <h3 class="reasons-title">Красивая дорога</h3>
-            <span>— №4 —</span>
-            <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="reasons-item">
-            <h3 class="reasons-title">Мало туристов</h3>
-            <span>— №5 —</span>
-            <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
-      </section>
+    <main class="main-container main-index">
+      <div class="page-container">
+        <h1>Город Седона</h1>
+        <img class="logo" src="img/index-background.jpg" width="1200" height="485" alt="Вид на Седону">
+        <section class="general">
+          <p class="general-about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="general-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        </section>
+        <section class="reasons">
+          <h2 class="visually-hidden">Причины и услуги</h2>
+          <div class="reasons-services">
+            <ul class="reasons-list">
+              <li class="reasons-item">
+                <div class="reasons-container">
+                  <h3 class="reasons-title">Настоящий городок</h3>
+                  <span>— №1 —</span>
+                  <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
+                <img class="reasons-img" src="img/city-place.jpg" width="800" height="384" alt="Местная достопримечательность">
+              </li>
+            </ul>
+            <ul class="services-list">
+              <li class="services-item">
+                <h3 class="services-title">Жильё</h3>
+                <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
+              <li class="services-item">
+                <h3 class="services-title">Еда</h3>
+                <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="services-item">
+                <h3 class="services-title">Сувениры</h3>
+                <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
+            <ul class="reasons-list">
+              <li class="reasons-item reverse">
+                <div class="reasons-container">
+                  <h3 class="reasons-title">Там есть мост дьявола</h3>
+                  <span>— №2 —</span>
+                  <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                </div>
+                <img class="reasons-img" src="img/bridge.jpg" width="800" height="384" alt="Мост дьявола">
+              </li>
+              <li class="reasons-item reasons-item-small">
+                <div class="reasons-container">
+                  <h3 class="reasons-title">Небольшая площадь</h3>
+                  <span>— №3 —</span>
+                  <p class="reasons-description">Все достопримечательности находятся очень близко</p>
+                </div>
+              </li>
+              <li class="reasons-item reasons-item-small">
+                <div class="reasons-container">
+                  <h3 class="reasons-title">Красивая дорога</h3>
+                  <span>— №4 —</span>
+                  <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                </div>
+              </li>
+              <li class="reasons-item reasons-item-small">
+                <div class="reasons-container">
+                  <h3 class="reasons-title">Мало туристов</h3>
+                  <span>— №5 —</span>
+                  <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+            </div>
+            </ul>
+          </div>
+        </section>
 
-      <section class="feedback">
-        <h2 class="feedback-title">Заинтересовались?</h2>
-        <p class="feedback-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button-brown">
-          ПОИСК ГОСТИНИЦЫ В Седоне
-        </a>
-      </section>
+        <section class="feedback">
+          <h2 class="feedback-title">Заинтересовались?</h2>
+          <p class="feedback-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="button-brown">
+            ПОИСК ГОСТИНИЦЫ В Седоне
+          </a>
+        </section>
+      </div>
     </main>
 
-    <footer>
-      <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-          <p class="subscribe-email">
-            <label class="visually-hidden" for="subscribe-email">Email</label>
-            <input type="email" required name="subscribe-email" placeholder="Ваш e-mail" id="subscribe-email">
+    <footer class="page-footer">
+      <div class="page-footer-container">
+        <section class="subscribe">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <p class="subscribe-email">
+              <label class="visually-hidden" for="subscribe-email">Email</label>
+              <input type="email" required name="subscribe-email" placeholder="Ваш e-mail" id="subscribe-email">
+            </p>
+            <button class="subscribe-button button-blue" type="submit">Подписаться</button>
+          </form>
+        </section>
+        <div class="page-footer-information">
+          <section class="social">
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="social-list">
+              <li class="social-item">
+                <a href="https://twitter.com/htmlacademy_ru">
+                  <span class="visually-hidden">
+                    Twitter
+                  </span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="https://www.facebook.com/htmlacademy">
+                  <span class="visually-hidden">
+                    Facebook
+                  </span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="https://www.youtube.com/c/HTMLacademyRUS/">
+                  <span class="visually-hidden">
+                    YouTube
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <p class="contact">
+            <a class="contact-phone" href="tel:88128121212">+7 (812) 812-12-12
+            </a>
           </p>
-          <button class="subscribe-button button-blue" type="submit">Подписаться</button>
-        </form>
-      </section>
-      <section class="social">
-        <h2 class="visually-hidden">Социальные сети</h2>
-        <ul class="social-list">
-          <li class="social-item">
-            <a href="https://twitter.com/htmlacademy_ru">
-              <span class="visually-hidden">
-                Twitter
-              </span>
+          <p class="about">
+            <a class="about-link" href="https://htmlacademy.ru">
+              .html academy
             </a>
-          </li>
-          <li class="social-item">
-            <a href="https://www.facebook.com/htmlacademy">
-              <span class="visually-hidden">
-                Facebook
-              </span>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="https://www.youtube.com/c/HTMLacademyRUS/">
-              <span class="visually-hidden">
-                YouTube
-              </span>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <p class="contact">
-        <a class="contact-phone" href="tel:88128121212">+7 (812) 812-12-12
-        </a>
-      </p>
-      <p class="about">
-        <a class="about-link" href="https://htmlacademy.ru">
-          .html academy
-        </a>
-      </p>
+          </p>
+        </div>
+      </div>
     </footer>
 
   </body>
