--- a/hotels.html
+++ b/hotels.html
@@ -11,17 +11,17 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-list" href="index.html">
+            <a class="navigation-link" href="index.html">
               Главная
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list" href="#">
+            <a class="navigation-link" href="#">
               О Седоне
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list navigation-link-current"  href="hotels.html">
+            <a class="navigation-link navigation-link-current"  href="hotels.html">
               Гостиницы
             </a>
           </li>
@@ -31,21 +31,21 @@
         </a>
         <ul class="navigation-user">
           <li class="navigation-item">
-            <a class="navigation-list" href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Поиск
               </span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list" href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Избранное
               </span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list button-brown" href="#">
+            <a class="navigation-link button-brown" href="#">
               ХОЧУ СЮДА!
             </a>
           </li>
@@ -73,7 +73,7 @@
               </li>
             </ul>
           </header>
-          <h2 class="visually-hidden" hidden>Список фильтров</h2>
+          <h2 class="visually-hidden">Список фильтров</h2>
           <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">
@@ -159,30 +159,30 @@
         <section class="catalog-hotels">
           <div class="catalog-hotels-results">
           <p class="hotels-count">Найдено гостиниц: 38</p>
-          <form class="sorting-type">
-            <label class="visually-hidden" for="sorting">Сортировка</label>
-            <select class="select-control" id="sorting" name="sorting">
-                <option value="popular">Сначала популярное</option>
-                <option value="cheap">Сначала дешёвое</option>
-                <option value="expensive">Сначала дорогое</option>
-            </select>
-            <button class="visually-hidden" type="submit">Отсортировать</button>
-          </form>
-          <a href="#" class="button-light button">
-            <span class="visually-hidden">
-              Показать плиткой
-            </span>
-          </a>
-          <a href="#" class="button-light button">
-            <span class="visually-hidden">
-              Показать карточку
-            </span>
-          </a>
-          <a href="#" class="button-light button">
-            <span class="visually-hidden">
-              Показать списком
-            </span>
-          </a>
+            <form class="sorting-type">
+              <label class="visually-hidden" for="sorting">Сортировка</label>
+              <select class="select-control" id="sorting" name="sorting">
+                  <option value="popular">Сначала популярное</option>
+                  <option value="cheap">Сначала дешёвое</option>
+                  <option value="expensive">Сначала дорогое</option>
+              </select>
+              <button class="visually-hidden" type="submit">Отсортировать</button>
+            </form>
+            <a href="#" class="button-light button">
+              <span class="visually-hidden">
+                Показать плиткой
+              </span>
+            </a>
+            <a href="#" class="button-light button">
+              <span class="visually-hidden">
+                Показать карточку
+              </span>
+            </a>
+            <a href="#" class="button-light button">
+              <span class="visually-hidden">
+                Показать списком
+              </span>
+            </a>
           </div>
           <h2 class="visually-hidden">Гостиницы</h2>
           <ul class="hotel-card-list">
@@ -228,6 +228,7 @@
             </li>
           </ul>
           <button class="button-blue show-more" type="button">Загрузить еще</button>
+          <div class="pagination-container">
           <ul class="pagination">
             <li class="pagination-item">
               <a class="pagination-link pagination-сurrent">1</a>
@@ -248,6 +249,7 @@
               <a class="pagination-link button-blue" href="#">10</a>
             </li>
           </ul>
+
           <form class="pages-number">
             <label for="pages-number">Гостиниц на странице:</label>
             <select class="select-control" id="pages-number" name="pages-number">
@@ -257,6 +259,7 @@
             </select>
             <button class="visually-hidden" type="submit">Выбрать число гостиниц</button>
           </form>
+          </div>
         </section>
     </main>
 
