--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-list navigation-link-current">
+            <a class="navigation-link navigation-link-current">
               Главная
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list" href="#">
+            <a class="navigation-link" href="#">
               О Седоне
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list" href="hotels.html">
+            <a class="navigation-link" href="hotels.html">
               Гостиницы
             </a>
           </li>
@@ -31,21 +31,21 @@
         </a>
         <ul class="navigation-user">
           <li class="navigation-item">
-            <a class="navigation-list" href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Поиск
               </span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list" href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Избранное
               </span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-list button-brown" href="#">
+            <a class="navigation-link button-brown" href="#">
               Хочу сюда!
             </a>
           </li>
@@ -55,8 +55,13 @@
 
     <main class="main-container main-index">
       <div class="page-container">
-        <h1>Город Седона</h1>
-        <img class="logo" src="img/index-background.jpg" width="1200" height="485" alt="Вид на Седону">
+        <h1 class="visually-hidden">Город Седона</h1>
+        <div class="logo-background1">
+          <div class="logo-background2">
+            <div class="logo-background3">
+            </div>
+          </div>
+        </div>
         <section class="general">
           <p class="general-about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="general-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -68,7 +73,7 @@
               <li class="reasons-item">
                 <div class="reasons-container">
                   <h3 class="reasons-title">Настоящий городок</h3>
-                  <span>— №1 —</span>
+                  <span class="reasons-number">— №1 —</span>
                   <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
                 <img class="reasons-img" src="img/city-place.jpg" width="800" height="384" alt="Местная достопримечательность">
@@ -92,7 +97,7 @@
               <li class="reasons-item reverse">
                 <div class="reasons-container">
                   <h3 class="reasons-title">Там есть мост дьявола</h3>
-                  <span>— №2 —</span>
+                  <span class="reasons-number">— №2 —</span>
                   <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                 </div>
                 <img class="reasons-img" src="img/bridge.jpg" width="800" height="384" alt="Мост дьявола">
@@ -100,21 +105,21 @@
               <li class="reasons-item reasons-item-small">
                 <div class="reasons-container">
                   <h3 class="reasons-title">Небольшая площадь</h3>
-                  <span>— №3 —</span>
+                  <span class="reasons-number">— №3 —</span>
                   <p class="reasons-description">Все достопримечательности находятся очень близко</p>
                 </div>
               </li>
               <li class="reasons-item reasons-item-small">
                 <div class="reasons-container">
                   <h3 class="reasons-title">Красивая дорога</h3>
-                  <span>— №4 —</span>
+                  <span class="reasons-number">— №4 —</span>
                   <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                 </div>
               </li>
               <li class="reasons-item reasons-item-small">
                 <div class="reasons-container">
                   <h3 class="reasons-title">Мало туристов</h3>
-                  <span>— №5 —</span>
+                  <span class="reasons-number">— №5 —</span>
                   <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
             </div>
